# kl_life

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  info.h.in  main.cpp  resources.rc.in
src/: CMakeLists.txt  game.cpp  game.h  infiniteuniverse.h  life_types.h  life_types.hpp  logger.cpp  logger.h  main.cpp  settings.cpp  settings.h  simpleuniverse.cpp  simpleuniverse.h  universe.cpp  universe.h
tests/: CMakeLists.txt  test_run.cpp  test_settings.cpp  test_simpleuniverse.cpp
